<resources>
    <string name="app_name">My Market</string>

    //로그인 strings
    <string name="str_title_sign_up">회원가입</string>
    <string name="str_action_sign_up">가입하기</string>
    <string name="str_info_sms_auth">휴대폰 번호를 인증해 주세요.</string>
    <string name="str_hint_input_phone_num">휴대폰 번호를 입력해 주세요</string>
    <string name="str_send_auth_num">인증번호 받기</string>
    <string name="str_re_send_auth_num">인증번호 다시 받기</string>
    <string name="str_hint_input_auth_num">인증번호를 입력해 주세요</string>
    <string name="str_confirm_auth_num">인증번호 확인</string>
    <string name="str_hint_input_name">닉네임을 입력해 주세요</string>
    <string name="str_success_sign_up">회원가입 성공</string>

    //네트워크 strings
    <string name="failure_on_network">네트워크 오류</string>

    //프로필 용 strings
    <string-array name="str_dialog_for_profile_img">
        <item>앨범에서 선택하기</item>
        <item>기본 이미지로 선택하기</item>
    </string-array>

    //main menu strings
    <string name="str_menu_home">홈</string>
    <string name="str_menu_sale">판매</string>
    <string name="str_menu_chat">채팅</string>
    <string name="str_menu_my_page">마이</string>


    //main toolbar menu strings
    <string name="str_search_home">검색</string>

    //상품등록 strings
    <string name="str_name_goods">상품명</string>
    <string name="str_category_goods">카테고리</string>
    <string name="str_price_goods">판매가격</string>
    <string name="str_explanation_goods">사이즈, 색상, 사용감, 사용기간 등 상세 정보를 입력하면 더 쉽게 판매할 수 있어요.</string>
    <string name="str_save_goods">완료</string>

    //상품등록 유효성 실패 strings
    <string name="str_fail_no_image">상품사진을 등록해 주세요</string>
    <string name="str_fail_no_name">상품명을 입력해 주세요</string>
    <string name="str_fail_no_category">카테고리를 선택해 주세요</string>
    <string name="str_fail_no_price">가격을 입력해 주세요</string>
    <string name="str_fail_no_details">상품설명을 입력해 주세요</string>

    //상품상세 strings
    <string name="str_select_category">카테고리 선택</string>
    <string-array name="array_list_goods_category">
        <item>디지털기기</item>
        <item>생활가전</item>
        <item>가구/인테리어</item>
        <item>생활/주방</item>
        <item>패션/잡화</item>
        <item>스포츠/레저</item>
        <item>취미/게임/음반</item>
        <item>도서</item>
        <item>가공식품</item>
        <item>반려동물용품</item>
        <item>식물</item>
        <item>기타 중고물품</item>
    </string-array>

    <string name="str_category_0">디지털기기</string>
    <string name="str_category_1">생활가전</string>
    <string name="str_category_2">가구/인테리어</string>
    <string name="str_category_3">생활/주방</string>
    <string name="str_category_4">패션/잡화</string>
    <string name="str_category_5">스포츠/레저</string>
    <string name="str_category_6">취미/게임/음반</string>
    <string name="str_category_7">도서</string>
    <string name="str_category_8">가공식품</string>
    <string name="str_category_9">반려동물용품</string>
    <string name="str_category_10">식물</string>
    <string name="str_category_11">기타 중고물품</string>


    <string name="str_chat_with_seller">채팅하기</string>
    <string name="str_update_goods">상품수정</string>
    <string name="str_change_state_goods">상태변경</string>
    <string name="str_delete_goods">상품삭제</string>

    <string-array name="array_list_goods_state">
        <item>판매중</item>
        <item>예약중</item>
        <item>거래완료</item>
    </string-array>
    <string name="str_deleted_goods">삭제된 게시물입니다.</string>
    <string name="str_success_change_state">상품 상태가 변경되었습니다</string>
    <string name="str_warning_delete_goods">상품을 삭제하시겠습니까?</string>
    <string name="str_success_delete_goods">상품이 삭제되었습니다</string>
    <string name="str_select_buyer_from_chat">최근 채팅 목록에서 구매자 찾기</string>
    <string name="str_empty_buyer_select_buyer">최근 대화한 사용자가 없습니다</string>
    <string name="str_title_select_buyer">구매자 선택</string>
    <string name="str_not_select_buyer">선택하지 않을래요</string>
    <string name="str_attention_cancel_sold_out">상태를 변경하면 상대방과의 거래가 취소됩니다. 그래도 변경하시겠습니까?</string>
    <string name="str_have_no_sales_history">판매내역이 없습니다</string>
    <string name="str_have_no_purchase_history">구매내역이 없습니다</string>
    <string name="str_have_no_interest_list">관심목록이 없습니다</string>
    <string name="str_delete_purchase">목록에서 삭제</string>
    <string name="str_is_interest">관심목록에 추가됐습니다</string>
    <string name="str_is_not_interest">관심목록에서 제거됐습니다</string>

    //main title strings
    <string name="str_title_home">전체보기</string>
    <string name="str_title_chat">채팅하기</string>
    <string name="str_title_my_page">마이페이지</string>
    //others title strings
    <string name="str_title_register_goods">상품 등록</string>
    <string name="str_title_update_goods">상품 수정</string>


    //앨범관련 strings
    <string name="str_too_many_images">사진은 10개까지만 등록가능합니다.</string>

    //마이페이지 strings
    <string name="str_title_update_user">프로필 수정</string>
    <string name="str_update_user">수정</string>
    <string name="str_sales_history">판매내역</string>
    <string name="str_purchase_history">구매내역</string>
    <string name="str_interest_goods">관심목록</string>

    //검색 strings
    <string name="str_title_search">검색</string>
    <string name="str_hint_search">검색어를 입력해 주세요</string>
    <string name="str_all_category_search">전체보기</string>
    <string name="str_set_condition_search">상품보기</string>
    <string name="str_min_price_search">최소가격</string>
    <string name="str_max_price_search">최대가격</string>
    <string name="str_over_min_price_search">최소가격은 최대가격보다 작아야 합니다</string>
    <string name="str_over_max_price_search">%s원 이하의 상품만 검색할 수 있습니다</string>
    <string name="str_range_price_search">%s원 이상 $s원 이하</string>

    //채팅 strings
    <string name="str_send_money_chat">송금하기</string>
    <string name="str_hint_send_chat">메시지를 입력해 주세요</string>
    <string-array name="array_image_send_chat">
        <item>카메라</item>
        <item>갤러리</item>
    </string-array>
    <string name="str_message_for_image">사진을 보냈습니다</string>
    <string name="str_bookmark_for_chat">여기까지 읽었습니다</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>