<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.AuthActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingStart="@dimen/layout_default_padding_start_end"
        android:paddingEnd="@dimen/layout_default_padding_start_end"
        android:paddingTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_info_sms_auth"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="40dp"
            />

        <EditText
            android:id="@+id/edit_input_phone_num_auth"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height"
            android:background="@drawable/outlined_edit_text"
            android:hint="@string/str_hint_input_phone_num"
            android:textSize="16sp"

            android:inputType="phone"/>

        <Button
            android:id="@+id/btn_get_auth_num"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/str_send_auth_num"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginBottom="20dp"


            />
        <LinearLayout
            android:id="@+id/layout_input_auth_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            >
            <EditText
                android:id="@+id/edit_input_auth_num_auth"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_text_height"
                android:background="@drawable/outlined_edit_text"
                android:hint="@string/str_hint_input_auth_num"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textIsSelectable="true"
                android:cursorVisible="false"/>

            <Button
                android:id="@+id/btn_confirm_auth_num"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/str_confirm_auth_num"
                android:textSize="17sp"
                />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>