<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sale.SaleActivity">
    <include
        android:id="@+id/toolbar_register_goods"
        layout="@layout/actionbar_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_register_goods"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/layout_default_padding_start_end"
            android:paddingEnd="@dimen/layout_default_padding_start_end"
            android:paddingTop="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_goods_image_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <EditText
                android:id="@+id/edit_name_goods_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_edit_text"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/str_name_goods"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:maxLength="50"
                android:imeOptions="actionNext"
                android:inputType="text"
                />
            <EditText
                android:id="@+id/edit_category_goods_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_edit_text"
                android:drawableEnd="@drawable/ic_select_mark"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/str_category_goods"
                android:gravity="center_vertical"
                android:focusable="false"
                />
            <EditText
                android:id="@+id/edit_price_goods_register"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_edit_text"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/str_price_goods"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:maxLength="9"
                android:inputType="numberDecimal"
                android:imeOptions="actionNext"
                />
            <EditText
                android:id="@+id/edit_details_goods_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="200dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/outlined_edit_text"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:hint="@string/str_explanation_goods"
                android:gravity="start"
                android:inputType="textMultiLine"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
    <ProgressBar
        android:id="@+id/progress_goods_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        />




</androidx.constraintlayout.widget.ConstraintLayout>