<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <include layout="@layout/actionbar_default"
        android:id="@+id/toolbar_select_buyer"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_for_goods_select_buyer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_select_buyer"
        android:background="@color/light_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/layout_default_padding_start_end"
        android:paddingEnd="@dimen/layout_default_padding_start_end"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        >
        <ImageView
            android:id="@+id/img_goods_select_buyer"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/user_default"
            />

        <TextView
            android:id="@+id/txt_category_select_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/img_goods_select_buyer"
            app:layout_constraintStart_toEndOf="@id/img_goods_select_buyer"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:paddingStart="5dp"
            tools:text="디지털기기"/>
        <TextView
            android:id="@+id/txt_name_select_buyer"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_category_select_buyer"
            app:layout_constraintStart_toEndOf="@id/img_goods_select_buyer"
            android:layout_marginStart="20dp"
            android:maxLines="2"
            android:ellipsize="end"
            tools:text="아이폰 14프로 256기"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingStart="5dp"/>
        <TextView
            android:id="@+id/txt_state_select_buyer"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            tools:text="판매완료"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:background="@drawable/outlined_edit_text"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="@id/txt_price_select_buyer"
            app:layout_constraintBottom_toBottomOf="@id/txt_price_select_buyer"
            app:layout_constraintStart_toStartOf="@id/txt_name_select_buyer"
            app:layout_constraintEnd_toStartOf="@id/txt_price_select_buyer"
            android:paddingTop="1dp"
            android:paddingBottom="1dp"
            android:gravity="center"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/txt_price_select_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            app:layout_constraintTop_toBottomOf="@id/txt_name_select_buyer"
            app:layout_constraintStart_toEndOf="@id/txt_state_select_buyer"
            tools:text="26,000원"
            android:paddingStart="5dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/txt_created_at_select_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txt_price_select_buyer"
            app:layout_constraintStart_toStartOf="@id/txt_name_select_buyer"
            android:paddingStart="5dp"
            tools:text="2020-02-26"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/layout_for_goods_select_buyer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="@dimen/layout_default_padding_start_end"
        android:paddingEnd="@dimen/layout_default_padding_start_end"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <TextView
            android:id="@+id/txt_empty_list_select_buyer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/str_empty_buyer_select_buyer"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_select_buyer"
            android:textSize="18sp"
            android:visibility="gone"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_select_buyer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"
            android:clipToPadding="true"
            />

        <Button
            android:id="@+id/btn_select_buyer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/str_title_select_buyer"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/btn_not_select_buyer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:enabled="false"
            />
        <Button
            android:id="@+id/btn_not_select_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TextButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="14sp"
            android:text="@string/str_not_select_buyer"/>



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>