<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".my_page.MyPageFragment">
    <include
        android:id="@+id/toolbar_my_page"
        layout="@layout/actionbar_default"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_my_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clipToPadding="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/layout_default_padding_start_end"
            android:paddingEnd="@dimen/layout_default_padding_start_end"
            android:paddingTop="20dp"
            android:paddingBottom="10dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_user_profile_my_page"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="?attr/selectableItemBackground"
                >
                <ImageView
                    android:id="@+id/img_user_my_page"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    tools:src="@drawable/user_default"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <TextView
                    android:id="@+id/txt_name_user_my_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_user_my_page"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:text="봉칼라슝"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"/>
                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_select_mark"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_for_user_profile_my_page"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/layout_user_profile_my_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />
                <Button
                    android:id="@+id/btn_sales_history_my_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_user_profile_my_page"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btn_purchase_history_my_page"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:backgroundTint="@null"
                    android:background="@drawable/btn_rounded"
                    android:drawableTop="@drawable/ic_sales_history"
                    android:text="@string/str_sales_history"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btn_purchase_history_my_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toEndOf="@id/btn_sales_history_my_page"
                    app:layout_constraintEnd_toStartOf="@id/btn_interest_goods_my_page"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_user_profile_my_page"
                    android:drawableTop="@drawable/ic_purchase_history"
                    app:backgroundTint="@null"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/str_purchase_history"
                    android:textColor="@color/black"
                    />
                <Button
                    android:id="@+id/btn_interest_goods_my_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintTop_toBottomOf="@id/divider_for_user_profile_my_page"
                    app:layout_constraintStart_toEndOf="@id/btn_purchase_history_my_page"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:drawableTop="@drawable/ic_interest_goods"
                    app:backgroundTint="@null"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/str_interest_goods"
                    android:textColor="@color/black"
                    />
            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/divider_for_set_user_my_page"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                app:layout_constraintTop_toBottomOf="@id/btn_purchase_history_my_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                />







        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>